deployment-rollingupdate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      type: app
      service: nginx
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        type: app
        service: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        resources:
         requests:
           memory: "512M"
           cpu: "250m"
         limits:
           memory: "1G"
           cpu: "500m"
        livenessProbe:
         httpGet:
           path: /
           port: 80
